# autopilot-firmware

./: .bazelrc  .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  BUILD  BUILD.bazel  CMakeLists.txt.jinja  Dockerfile  Makefile  README.md  WORKSPACE  app_src.mk.jinja  cpputest.BUILD  package.yml
.ci/: install_bazel.sh  install_common_dependencies.sh  install_cpputest.sh  install_crosscompiler.sh
doc/: .gitignore  EKF design.ipynb  Makefile  information_flow.dot
messages/: ArmingStatus.proto  BoatState.proto  FlightControlInput.proto  IMUReading.proto  MessageSize.proto  Quaternion.proto  RPCParameter.proto  RemoteControlInput.proto  RemoteProcedureCall.proto  SBUSPacket.proto  SetLed.proto  TestRPC.proto  Timestamp.proto  TopicHeader.proto
src/: chconf.h  cmd.c  commander.c  commander.h  exti.c  exti.h  ffconf.h  halconf.h  input_mapper.c  input_mapper.h  input_mapper_thread.c  input_mapper_thread.h  ip_uart.c  ip_uart.h  log.c  log.h  lwipopts.h  main.c  main.h  mcuconf.h  mpu9250.c  mpu9250_registers.h  mpu9250_thread.c  mpu9250_thread.h  msgbus_protobuf.c  msgbus_protobuf.h  output_mixer.c  output_mixer.h  output_pwm_thread.c  parameter_port.c  rpc.c  rpc.h  rpc_callbacks.c  rpc_server_thread.c  sbus.c  sbus_thread.c  sbus_thread.h  sdcard.c  state_estimation_thread.c  state_estimation_thread.h  (+3 more)
tests/: arming.cpp  hal.h  hal_mocks.cpp  input_remapper.cpp  mpu9250.cpp  msgbus_protobuf.cpp  output_mixer.cpp  rpc.cpp  rpc_parameter.cpp  sbus_parser.cpp
tools/: convert_logs.py  format-pre-commit-hook.py  get_params.py  heap_size.py  inject_sbus.py  rpc.py  (+7 more)
(+77 files in other folders)
