# TODO: Generate that one too
cc_library(
    name = "messages",
    srcs = glob([
        "build/messages/*.pb.c",
        "build/messages/*.pb.h",
    ]),
    hdrs = glob(["build/messages/*.pb.h"]),
    visibility = ["//visibility:public"],
    strip_include_prefix = "build",
    deps = [
        "@com_github_nanopb_nanopb//:nanopb",
    ],
)
